feat: example usage of tf mux and plugin go
Example usage of TF mux and plugin go.
There seems to be some limitations around using `DynamicPseudoType` with
lists and the TF docs generation tool lack support for tuples. So for
now it's better to stick to plugin framework only.

Ref: https://github.com/hashicorp/terraform-plugin-go/issues/267

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/templates/resources.md.tmpl
+++ b/templates/resources.md.tmpl
@@ -15,3 +15,10 @@ description: |-
 {{ printf "{{tffile %q}}" .ExampleFile }}
 {{- end }}
 {{ .SchemaMarkdown | trimspace }}
+{{ if .HasImport -}}
+## Import
+
+Import is supported using the following syntax:
+
+{{ printf "{{tffile %q}}" .ImportFile }}
+{{- end }}
