docs: fix rendering of website
Fix rendering in TF website.
Fixes typos and wrong references.
Also bump Talos SDK to v1.4.0-beta.1

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/templates/data-sources/machine_configuration.md.tmpl
+++ b/templates/data-sources/machine_configuration.md.tmpl
@@ -9,12 +9,11 @@ description: |-
 
 {{ .Description | trimspace }}
 
-> **Note:** It is recommended to set the optional `talos_version` attribute.
-> Otherwise when using a new version of the provider with a new major version of the Talos SDK, new machineconfig features will be enabled by default which could cause unexpected behavior.
+-> **Note:** It is recommended to set the optional `talos_version` attribute. Otherwise when using a new version of the provider with a new major version of the Talos SDK, new machineconfig features will be enabled by default which could cause unexpected behavior.
 
 {{ if .HasExample -}}
 ## Example Usage
 
-{{ printf "{{tffile %q}}" .ExampleFile }}
+{{ tffile (printf .ExampleFile) }}
 {{- end }}
 {{ .SchemaMarkdown | trimspace }}
