chore: bump deps
Bump deps.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/templates/resources.md.tmpl
+++ b/templates/resources.md.tmpl
@@ -20,5 +20,5 @@ description: |-
 
 Import is supported using the following syntax:
 
-{{ printf "{{tffile %q}}" .ImportFile }}
+{{ tffile (printf .ImportFile) }}
 {{- end }}
